# dhv-pdf-to-anki

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/dhv_pdf_to_anki/: __init__.py  __main__.py  extend_questions.py  extract_images.py  extract_questions.py  generate_anki.py  web.py
