[project]
name = "dhv-pdf-to-anki"
version = "0.1.0"
description = "Generate Anki flashcards from DHV online Learning PDF downloads"
readme = "README.md"
authors = [
    { name = "Matthias Bilger", email = "matthias@bilger.info" }
]
requires-python = ">=3.12"
dependencies = [
    "genanki>=0.13.1",
    "mistralai>=1.8.1",
    "pymupdf>=1.26.0",
    "tqdm>=4.67.1",
]

[project.scripts]
dhv-pdf-to-anki = "dhv_pdf_to_anki:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
